fix sign up page display on small phone not properly

--- a/ecommerce/src/Styles/SignUp.css
+++ b/ecommerce/src/Styles/SignUp.css
@@ -72,6 +72,7 @@
 }
 .signup-item input,
 .signup-item input:after {
+  width: 100%;
   border-style: none;
   border-bottom: 2px solid black;
   font-weight: bold;
